Bug 1383541 - WMFDecoderModule shouldn't call useless IsH264DecoderBlacklisted() - r=jya

This function now always returns false (since bug 1253395), so
WMFDecoderModule::HasH264 doesn't need to call it anymore.

Note that we are keeping the code, as we will slightly modify it in the next
patch for a different use.

MozReview-Commit-ID: 7fzktsnFU2m